--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 #baseurl: "" # the subpath of your site, e.g. /blog  
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: linjia-feng-71a0ab165
+github_username: LinjiaF
 
 
 # Build settings
